# liquid-ca

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Jenkinsfile  README.md
ga/: ga.cpp  ga.hpp
include/: Agent.hpp  BoundedRectangle.hpp  Heading.hpp  LCA.hpp  LCAFactory.hpp  Model.hpp  ModelStats.hpp  MovementRule.hpp  Network.hpp  OneDLattice.hpp  Point.hpp  Range.hpp  Rule.hpp  Surface.hpp  Torus.hpp  TotalisticRule.hpp  Transition.hpp
rules/: foo.rule  life.rule  majority-flip.rule  majority.rule  two-choice.rule
scripts/: ca_performance.gp.in  levy_ca_experiment.sh  levy_ca_experiment.sh.in  performance_sweep.gp
src/: Agent.cpp  Heading.cpp  LCA.cpp  LCAFactory.cpp  Model.cpp  ModelStats.cpp  MovementRule.cpp  Network.cpp  OneDLattice.cpp  Point.cpp  Range.cpp  Rule.cpp  Torus.cpp  TotalisticRule.cpp  aggregate_density_history.cpp  aggregate_to_dot.cpp  density_sweep.cpp  eval_at.cpp  levy_viz.cpp  levy_walk.cpp  majority_history.cpp  network_statistics.cpp  newtork_statistics.cpp  one_dimensional_lattice.cpp  random_networks.cpp  random_regular_networks.cpp  random_spatial.cpp  sim_viz.cpp  synchronization.cpp  transition_parser.cpp  velocity_experiment.cpp  velocity_experiment_time.cpp  velocity_sweep.cpp
test/: agent_test.cpp  heading_test.cpp  model_stats_test.cpp  model_test.cpp  network_test.cpp  point_test.cpp  range_test.cpp  rule_test.cpp  surface_test.cpp
